change networkid for local kubernetes ethereum network and rename scripts
1. The NETOWORKID parameter in the yaml files needed to be more unique
   and not just a ISO date value. Changed to a ten digit random number.
2. Renamed the start and shutdown scripts for the local Kubernetes
   cluster to `up` and `down` to save some typing.

expose tx-node on localhost:8545 via type LoadBalancer

To simplify testing with the Ethereum test cluster we now expose
the geth RPC port 8545 of the tx-node on localhost.

add gratuitous output of dashboard URL when booting the Ethereum cluster

add diagram showing interactions between Ethereum testnet components

add ignoring of keystore directory

add hostvolume support for DATADIR to save chain data

We want to be able to persist existing chain data in case pods
are recycled by Kubernetes. To do this we introduce a HOSTVOLUME
parameter that if set will be used to store chain data when geth
boots.

make number of Keep client accounts created a Docker build parameter

Depending on the number of Keep clients we want to run concurrently
attached to the Ethereum testnet we need to pregenerate a matching
number of accounts and prefund them. The Docker build command now
takes an integer parameter KEEP_ACCOUNTS that specifies the number
of accounts to create. Accounts are created and added to the genesis.json
file where they are then prefunded.

set ethash.dagdir to equal DATADIR when booting geth

We need to store the ethash DAG in the same location as other chain data
so we can manage all geth data on a persistent volume.

add support for parameterized directories in hostPath persistent volumes

To persist chain data on a local volume when running on Docker Desktop
or in the cloud we need to create sub-directories for each pod
instance in case we are writing to a shared volume.
We need to inform the bootNodeReporter about the changed path to
the IPC file that gives it access to geth via IPC.

Comma delimit each eth account object so that

--- a/infrastructure/geth-node/Dockerfile
+++ b/infrastructure/geth-node/Dockerfile
@@ -1,7 +1,6 @@
 FROM lispmeister/geth-dev
 MAINTAINER "Markus Fix <Markus.Fix@keep.network>
 
-
 # configure log rotation
 RUN pm2 install pm2-logrotate
 RUN pm2 set pm2-logrotate:max_size 100M
@@ -24,9 +23,12 @@ WORKDIR /root
 # copy passphrase file
 COPY testnet-account-passphrase.txt passphrase
 
-# create accounts and generate genesis.json
+# define default for KEEP_ACCOUNTS
+ARG KEEP_ACCOUNTS=5
+# create mining account, KEEP_ACCOUNTS client accounts and generate genesis.json
+COPY genesis-template.json genesis-template.json
 COPY geth-init.sh geth-init.sh
-RUN /root/geth-init.sh
+RUN /root/geth-init.sh $KEEP_ACCOUNTS
 
 # provision our three services (check app.json for details)
 COPY app.json app.json
