--- a/infrastructure/kube/lcl/tx-nodes.yaml
+++ b/infrastructure/kube/lcl/tx-nodes.yaml
@@ -16,21 +16,21 @@ spec:
   - port: 30303
     targetPort: 30303
     name: tcp-30303
-  - port: 30303
-    targetPort: 30303
-    name: udp-30303
-    protocol: UDP
+  # - port: 30303
+  #   targetPort: 30303
+  #   name: udp-30303
+  #   protocol: UDP
   selector:
     app: geth
     type: tx
-
+  type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: tx-node
 spec:
-  replicas: 1
+  replicas: 1 # must be 1 to utilize local persistent volume (see docs)
   template:
     metadata:
       labels:
@@ -40,6 +40,9 @@ spec:
       containers:
       - name: tx
         image: lispmeister/geth-node
+        volumeMounts:
+          - mountPath: "/hostvolume"
+            name: hostvolume
         ports:
         - containerPort: 8545
         - containerPort: 8546
@@ -58,7 +61,7 @@ spec:
             fieldRef:
               fieldPath: status.podIP
         - name: NETWORKID
-          value: "20181114"
+          value: "9384767738"
         - name: WS_SERVER
           value: ws://dashboard:3000
         - name: WS_SECRET
@@ -69,3 +72,12 @@ spec:
           value: network_1
         - name: BOOTNODE_PUBLIC_IP
           value: dashboard
+        - name: HOSTVOLUME
+          value: "/hostvolume"
+        - name: ETH_IPC_PATH
+          value: "/root/.geth/geth.ipc"
+      volumes:
+      - name: hostvolume
+        hostPath:
+          path: /tmp/k8-volumes/tx
+          type: DirectoryOrCreate
