first working prototype of using configmaps for keystore secrets

--- a/infrastructure/kube/lcl/keystore-configmap-job.yaml
+++ b/infrastructure/kube/lcl/keystore-configmap-job.yaml
@@ -4,20 +4,27 @@ metadata:
   name: keystore-configmap-job
 spec:
   template:
+    metadata:
+      name: batch-configmap-job
     spec:
       containers:
       - name: batch-configmap-job
-        image: busybox
-        command: ["cat",  "/keystore/UTC--2019-01-16T14-05-44.015787400Z--11714a2c5fc36d55b499dc76cae0a631cb0cbd73"]
+        image: gcr.io/google_containers/busybox
         volumeMounts:
         - name: keystore-configmap-volume
           mountPath: /keystore
-     volumes:
-       - name: keystore-configmap-volume
-         configMap:
-           name: keystore-8b99e241b3a65030661cf8788de8e5ca45c48f2b
-          items:
-          - key: UTC--2019-01-16T14-05-52.330001500Z--8b99e241b3a65030661cf8788de8e5ca45c48f2b
-            path: UTC--2019-01-16T14-05-52.330001500Z--8b99e241b3a65030661cf8788de8e5ca45c48f2b
+        command: ["cat", "$(KEEP_ETHEREUM_KEYFILE)"]
+        env:
+          - name: KEEP_ETHEREUM_ACCOUNT
+            value: "8b99e241b3a65030661cf8788de8e5ca45c48f2b"
+          - name: KEEP_ETHEREUM_KEYFILE
+            value: "/keystore/8b99e241b3a65030661cf8788de8e5ca45c48f2b"
+      volumes:
+        - name: keystore-configmap-volume
+          configMap:
+            name: 8b99e241b3a65030661cf8788de8e5ca45c48f2b
+            items:
+              - key: 8b99e241b3a65030661cf8788de8e5ca45c48f2b
+                path: 8b99e241b3a65030661cf8788de8e5ca45c48f2b
       restartPolicy: Never
   backoffLimit: 4
