Mount volume claim to /mnt/eth-data We need a way to recover eth-testnet data if a pod gets shot.  We decided to address this by mounting a persistent volume and setting the eth data dir to the mount point.  With all of that said we (I) never mounted the volume claim...and only noticed after the chain reset again.  :untada:

--- a/infrastructure/kube/keep-dev/eth-miner-nodes.yaml
+++ b/infrastructure/kube/keep-dev/eth-miner-nodes.yaml
@@ -55,6 +55,9 @@ spec:
         - containerPort: 8545
         - containerPort: 8546
         - containerPort: 30303
+        volumeMounts:
+        - name: eth-miner-node
+          mountPath: /mnt/eth-data
         env:
         - name: INSTANCE_NAME
           valueFrom:
