--- a/infrastructure/kube/keep-dev/eth-tx-nodes.yaml
+++ b/infrastructure/kube/keep-dev/eth-tx-nodes.yaml
@@ -54,6 +54,9 @@ spec:
         - containerPort: 8545
         - containerPort: 8546
         - containerPort: 30303
+        volumeMounts:
+        - name: eth-tx-node
+          mountPath: /mnt/eth-data
         env:
         - name: INSTANCE_NAME
           valueFrom:
