refactor configuration override via environment variables and fix tests
We now support the following environment variables as overrides
for parameters defined in the toml config file for the Keep client:

ethPasswordEnvVariable = "KEEP_ETHEREUM_PASSWORD"
ethAccountEnvVariable = "KEEP_ETHEREUM_ACCOUNT"
ethKeyfileEnvVariable = "KEEP_ETHEREUM_KEYFILE"
ethRandomBeaconContractEnvVariable = "KEEP_ETHEREUM_RANDOM_BEACON_CONTRACT"
ethKeepGroupContractEnvVariable = "KEEP_ETHEREUM_KEEP_GROUP_CONTRACT"
ethStakingProxyContractEnvVariable = "KEEP_ETHEREUM_STAKING_PROXY_CONTRACT"
ethURLEnvVariable = "KEEP_ETHEREUM_URL"
ethURLRPCEnvVariable = "KEEP_ETHEREUM_URL_RPC"
libp2pPortEnvVariable = "KEEP_LIBP2P_PORT"
libp2pPeersEnvVariable = "KEEP_LIBP2P_PEERS"
libp2pSeedEnvVariable = "KEEP_LIBP2P_SEED"

All of the above parameters have tests in config_test.go now.

--- a/test/config.toml
+++ b/test/config.toml
@@ -13,6 +13,7 @@
 [ethereum.ContractAddresses]
 	KeepRandomBeacon = "0x639deb0dd975af8e4cc91fe9053a37e4faf37649"
 	KeepGroup = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
+	StakingProxy = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
 
 [libp2p]
 	Port = 27001
