--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -147,3 +147,7 @@ required = ["github.com/gogo/protobuf/protoc-gen-gogoslick", "github.com/ethereu
   name = "github.com/BurntSushi/toml"
   revision = "b26d9c308763d68093482582cea63d69be07a0f0"
   source = "https://github.com/keep-network/toml.git"
+
+[[constraint]]
+  name = "github.com/keep-network/go-ethereum"
+  version = "1.8.15"
