Eddit phase 14 logic and add testing.
Included a newer web3 version as the older version does not mimic solidity's compact hashing
made some phase 14 logic better by removing clutter (mainly in eligibleSubmitter())
Removed TestPublishDkgResult.js tests as the old submission method will no longer be used
Added a helper method to get the block during which a user at a given index becomes eligible to submit a DKG result

--- a/contracts/solidity/package.json
+++ b/contracts/solidity/package.json
@@ -10,7 +10,7 @@
     "truffle": "truffle",
     "test": "truffle test",
     "testm": "truffle test ./test/TestPublishDkgResult.js",
-    "testk": "truffle test ./test/TestKeepGroupSelection.js",
+    "testk": "truffle test ./test/TestDkgConflictResolution.js",
     "demo": "truffle migrate --reset && truffle exec ./scripts/demo.js"
   },
   "author": "Matt Luongo <mhluongo@gmail.com>",
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/keep-network/contracts",
   "dependencies": {
-    "openzeppelin-solidity": "^2.0.0"
+    "openzeppelin-solidity": "^2.0.0",
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "@digix/doxity": "github:keep-network/doxity#master",
