Build adoc files recursively as far as needed
Applies both to PDFs and HTMLs, using bash's extglob and globstar
options.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,10 +79,11 @@ jobs:
       - run:
           name: Generate Asciidoctor PDF/HTML Files
           command: |
+            shopt -s extglob globstar nullglob
             cd docs
-            asciidoctor *.adoc */*.adoc
+            asciidoctor *.adoc **/*.adoc
             for a in $(ls *.html */*.html); do mkdir -p /tmp/docs/$(dirname $a); cp $a /tmp/docs/$(dirname $a)/; done
-            asciidoctor-pdf *.adoc */*.adoc
+            asciidoctor-pdf *.adoc **/*.adoc
             for a in $(ls *.pdf */*.pdf); do mkdir -p /tmp/docs/$(dirname $a); cp $a /tmp/docs/$(dirname $a)/; done
       - persist_to_workspace:
           root: /tmp/docs
