--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
         - run: cd contracts/solidity && cp truffle_sample.js truffle.js && npm install && npm run test
   generate_docs_solidity:
     docker:
-      - image: ngrinkevich/nodejs-python-solc:latest
+      - image: keepnetwork/nodejs-python-solc:0.5.4
     steps:
       - checkout
       - run:
