--- a/infrastructure/kube/lcl/tx-nodes.yaml
+++ b/infrastructure/kube/lcl/tx-nodes.yaml
@@ -37,10 +37,11 @@ spec:
         app: geth
         type: tx
     spec:
+      imagePullSecrets:
+      - name: google-container-registry-auth
       containers:
       - name: tx
         image: gcr.io/keep-dev-fe24/eth-geth-node:latest
-        imagePullPolicy: Never
         volumeMounts:
           - mountPath: "/hostvolume"
             name: hostvolume
