--- a/infrastructure/kube/keep-dev/keep-client/config/keep-standard-peer-0x415650a368157dec773cc556965856188c6ca84a.toml
+++ b/infrastructure/kube/keep-dev/keep-client/config/keep-standard-peer-0x415650a368157dec773cc556965856188c6ca84a.toml
@@ -8,7 +8,7 @@
 
 [ethereum.account]
   Address            = "0x415650a368157dec773cc556965856188c6ca84a"
-  KeyFile            = "/tmp/UTC--2019-03-01T16-58-50.282974600Z--415650a368157dec773cc556965856188c6ca84a"
+  KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeacon contract
