Add stub version of P14.
This stub contains most of the full functionality without some
potentially counterproductive checks and time controls

--- a/contracts/solidity/package.json
+++ b/contracts/solidity/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/keep-network/contracts",
   "dependencies": {
-    "openzeppelin-solidity": "^2.1.2"
+    "openzeppelin-solidity": "^2.1.2",
+    "ethereumjs-utils": "^5.2.5"
   },
   "devDependencies": {
     "@digix/doxity": "github:keep-network/doxity#master",
