--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-0.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-0.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-peer-0
+  name: keep-client-standard-peer-0
   labels:
     app: keep-client
-    type: peer-0
+    type: standard-peer-0
 spec:
   ports:
   - port: 3922
@@ -13,26 +13,26 @@ spec:
     name: tcp-3922
   selector:
     app: keep-client
-    type: peer-0
+    type: standard-peer-0
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: keep-client-peer-0
+  name: keep-client-standard-peer-0
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: keep-client
-      type: peer-0
+      type: standard-peer-0
   template:
     metadata:
       labels:
         app: keep-client
-        type: peer-0
+        type: standard-peer-0
     spec:
       containers:
-      - name: keep-client-peer-0
+      - name: keep-client-standard-peer-0
         image: gcr.io/keep-dev-fe24/keep-client
         ports:
           - containerPort: 3922
