--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-1.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-1.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-peer-1
+  name: keep-client-standard-peer-1
   labels:
     app: keep-client
-    type: peer-1
+    type: standard-peer-1
 spec:
   ports:
   - port: 3923
@@ -13,26 +13,26 @@ spec:
     name: tcp-3923
   selector:
     app: keep-client
-    type: peer-1
+    type: standard-peer-1
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: keep-client-peer-1
+  name: keep-client-standard-peer-1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: keep-client
-      type: peer-1
+      type: standard-peer-1
   template:
     metadata:
       labels:
         app: keep-client
-        type: peer-1
+        type: standard-peer-1
     spec:
       containers:
-      - name: keep-client-peer-1
+      - name: keep-client-standard-peer-1
         image: gcr.io/keep-dev-fe24/keep-client
         ports:
           - containerPort: 3923
