--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-2.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-2.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-peer-2
+  name: keep-client-standard-peer-2
   labels:
     app: keep-client
-    type: peer-2
+    type: standard-peer-2
 spec:
   ports:
   - port: 3924
@@ -13,26 +13,26 @@ spec:
     name: tcp-3924
   selector:
     app: keep-client
-    type: peer-2
+    type: standard-peer-2
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: keep-client-peer-2
+  name: keep-client-standard-peer-2
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: keep-client
-      type: peer-2
+      type: standard-peer-2
   template:
     metadata:
       labels:
         app: keep-client
-        type: peer-2
+        type: standard-peer-2
     spec:
       containers:
-      - name: keep-client-peer-2
+      - name: keep-client-standard-peer-2
         image: gcr.io/keep-dev-fe24/keep-client
         ports:
           - containerPort: 3924
