--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-0.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-0.yaml
@@ -51,13 +51,13 @@ spec:
       volumes:
       - name: eth-keyfile
         configMap:
-          name: keep-standard-peer-0x9ef36d051ce8c7e6f626f7b5883d40b6fe8b7a2a
+          name: keep-standard-peer-0
           items:
             - key: eth-keyfile
               path: eth-keyfile
       - name: keep-client-config
         configMap:
-          name: keep-standard-peer-0x9ef36d051ce8c7e6f626f7b5883d40b6fe8b7a2a
+          name: keep-standard-peer-0
           items:
             - key: keep-client-config.toml
               path: keep-client-config.toml
