--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-2.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-2.yaml
@@ -51,13 +51,13 @@ spec:
       volumes:
       - name: eth-keyfile
         configMap:
-          name: keep-standard-peer-0xca006d1947dbd8df153750fabd13cae3c5f0870e
+          name: keep-standard-peer-2
           items:
             - key: eth-keyfile
               path: eth-keyfile
       - name: keep-client-config
         configMap:
-          name: keep-standard-peer-0xca006d1947dbd8df153750fabd13cae3c5f0870e
+          name: keep-standard-peer-2
           items:
             - key: keep-client-config.toml
               path: keep-client-config.toml
