--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-3.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-3.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-peer-3
+  name: keep-client-standard-peer-3
   labels:
     app: keep-client
-    type: peer-3
+    type: standard-peer-3
 spec:
   ports:
   - port: 3925
@@ -13,26 +13,26 @@ spec:
     name: tcp-3925
   selector:
     app: keep-client
-    type: peer-3
+    type: standard-peer-3
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: keep-client-peer-3
+  name: keep-client-standard-peer-3
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: keep-client
-      type: peer-3
+      type: standard-peer-3
   template:
     metadata:
       labels:
         app: keep-client
-        type: peer-3
+        type: standard-peer-3
     spec:
       containers:
-      - name: keep-client-peer-3
+      - name: keep-client-standard-peer-3
         image: gcr.io/keep-dev-fe24/keep-client
         ports:
           - containerPort: 3925
@@ -51,13 +51,13 @@ spec:
       volumes:
       - name: eth-keyfile
         configMap:
-          name: keep-standard-peer-0x5772807fb7cc8a641dfd96f3af8d1489954ee4b0
+          name: keep-standard-peer-3
           items:
             - key: eth-keyfile
               path: eth-keyfile
       - name: keep-client-config
         configMap:
-          name: keep-standard-peer-0x5772807fb7cc8a641dfd96f3af8d1489954ee4b0
+          name: keep-standard-peer-3
           items:
             - key: keep-client-config.toml
               path: keep-client-config.toml
