--- a/infrastructure/kube/keep-dev/keep-client/config/keep-client-bootstrap-peer-0.toml
+++ b/infrastructure/kube/keep-dev/keep-client/config/keep-client-bootstrap-peer-0.toml
@@ -3,20 +3,20 @@
 # Provider Initialization Example
 
 [ethereum]
-	URL                = "ws://10.102.100.98:8546"
-	URLRPC             = "http://10.102.100.98:8545"
+	URL                = "ws://eth-tx-node.default.svc.cluster.local:8546"
+	URLRPC             = "http://eth-tx-node.default.svc.cluster.local:8545"
 
 [ethereum.account]
-	Address            = "0x946703d984f3c250d5311424426ff166d49b3683"
+	Address            = "0xA86c468475EF9C2ce851Ea4125424672C3F7e0C8"
 	KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeacon contract
-  KeepRandomBeacon = "0xb913b3d6E14B51e45062113C2e7b6d83955a231A"
+  KeepRandomBeacon = "0x439f517ccb968e5cb4Bb48B6888645C57906B084"
   # Hex-encoded address of KeepGroup contract
-  KeepGroup = "0xAA8EBDedE631f8a38F8F27475B724acdbf7A3b1c"
+  KeepGroup = "0xAb5D2d616EB717cA527a946517eA70Fdc3e3D55b"
   # StakingProxy
-  Staking = "0x22DEe6b2d61Afa48EFeFc494780a501Ab1605d44"
+  Staking = "0xca59725bC84196e90BBE295460Ae90f11164Fe13"
 
 # Bootstrap node creating a new network.
   [LibP2P]
