Fix lingering bootstrap references in standard peer kubefiles

--- a/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-1.yaml
+++ b/infrastructure/kube/keep-dev/keep-client/keep-client-standard-peer-1.yaml
@@ -22,7 +22,7 @@ metadata:
   labels:
     keel.sh/policy: all
     app: keep-client
-    type: bootstrap-peer-0
+    type: standard-peer-1
 spec:
   replicas: 1
   selector:
