--- a/contracts/solidity/dashboard/package.json
+++ b/contracts/solidity/dashboard/package.json
@@ -5,22 +5,21 @@
   "dependencies": {
     "bignumber": "^1.1.0",
     "bootstrap": "^3.3.7",
-    "chart.js": "^2.7.1",
-    "less": "^2.7.3",
+    "chart.js": "^2.8.0",
+    "less": "^3.9.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-watch-compiler": "^1.10.0",
     "moment": "^2.20.1",
     "npm-run-all": "^4.1.2",
-    "react": "^16.2.0",
+    "react": "^16.6.3",
     "react-bootstrap": "^0.31.5",
     "react-chartjs-2": "^2.6.4",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.6.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.1",
     "require-symlink": "^0.2.0",
-    "truffle": "^4.1.5",
-    "truffle-contract": "^3.0.5",
-    "web3": "^1.0.0-beta.34"
+    "truffle": "^5.0.10",
+    "web3": "^1.0.0-beta.51"
   },
   "scripts": {
     "env": "truffle exec ./scripts/env.js",
@@ -34,5 +33,11 @@
   },
   "requireSymlinks": {
     "contracts": "../build/contracts"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
