--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,13 @@
 version: 2.1
+
+executors:
+  docker-git:
+    docker:
+      - image: docker:18.06.0-ce-git
+
+orbs:
+  gcp-gcr: circleci/gcp-gcr@0.0.4
+
 jobs:
   test_solidity:
     docker:
@@ -36,9 +45,8 @@ jobs:
           root: /tmp/docs
           paths:
             - solidity/*
-  build_client_and_test_go:
-    docker:
-      - image: docker:17.05.0-ce-git
+  build_image:
+    executor: docker-git
     steps:
       - checkout
       - setup_remote_docker:
@@ -46,12 +54,49 @@ jobs:
       - run:
           name: Run Docker build
           command: |
-            docker build --target gobuild -t go_build_env .
-            docker build -t client .
+            docker build --target gobuild -t go-build-env .
+            docker build -t $GCR_REGISTRY_URL/$GOOGLE_PROJECT_ID/keep-client .
+            mkdir -p /tmp/images/keep-client/
+            docker save -o /tmp/images/keep-client/go-build-env.tar go-build-env
+            docker save -o /tmp/images/keep-client/keep-client.tar $GCR_REGISTRY_URL/$GOOGLE_PROJECT_ID/keep-client
+      - persist_to_workspace:
+          root: /tmp/images
+          paths:
+            - keep-client
+  test_go:
+    executor: docker-git
+    steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - attach_workspace:
+          at: /tmp/images
+      - run:
+          name: Load keep-client gobuild image
+          command: |
+            docker load -i /tmp/images/keep-client/go-build-env.tar
       - run:
           name: Run Go tests
           command: |
-            docker run -w /go/src/github.com/keep-network/keep-core go_build_env go test ./.../
+            docker run -w /go/src/github.com/keep-network/keep-core go-build-env go test ./.../
+  publish_image:
+    executor: gcp-gcr/default
+    steps:
+      - attach_workspace:
+          at: /tmp/images
+      - run:
+          name: Load keep-client image
+          command: |
+            docker load -i /tmp/images/keep-client/keep-client.tar
+      - gcp-gcr/gcr-auth:
+          google-project-id: GOOGLE_PROJECT_ID
+          google-compute-zone: GOOGLE_COMPUTE_ZONE_A
+          # This param doesn't actually set anything, leaving here as a reminder to check when they fix it.
+          gcloud-service-key: GCLOUD_SERVICE_KEY
+      - gcp-gcr/push-image:
+          google-project-id: GOOGLE_PROJECT_ID
+          registry-url: $GCR_REGISTRY_URL
+          image: keep-client
+          tag: latest
   generate_docs_tex:
     docker:
       - image: keepnetwork/texlive:3
@@ -112,9 +157,21 @@ workflows:
   solidity:
     jobs:
       - test_solidity
-  go:
+  build-test-publish:
     jobs:
-      - build_client_and_test_go
+      - build_image:
+          context: keep-dev
+      - test_go:
+          requires:
+            - build_image
+      - publish_image:
+          filters:
+            branches:
+              only: master
+          context: keep-dev
+          requires:
+            - build_image
+            - test_go
   docs:
     jobs:
       - generate_docs_tex
