Finish ignoring pyc and ipynb checkpoints
Some files were already checked in before the ignores took effect; these
are also gone now.

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,7 @@ main.test
 keystore
 keep_accounts
 
-# Ipython Notebook Checkpoints
+# Python and IPython
 *.ipynb_checkpoints
+__pycache__
+*.pyc
