--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,12 +173,17 @@ workflows:
   solidity:
     jobs:
       - test_solidity
-  build-test-publish:
+  build_test_migrate_publish:
     jobs:
       - build_client_and_test_go:
           context: keep-dev
       - migrate_contracts_keep_dev:
+          filters:
+            branches:
+              only: master
           context: keep-dev
+          requires:
+            - build_client_and_test_go
       - publish_client:
           filters:
             branches:
