--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
  - repo: https://github.com/keep-network/pre-commit-golang.git
-   rev: 47493cd
+   rev: c23a18
    hooks:
     - id: go-imports
     - id: go-vet
