Don't publish until migrations are done Keel deploys artifacts on image publish.  For this to be successful we need to have contract migrations done first. Here we add a require to the publish portion of the workflow so that we're sure migrations are completed before publish.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,8 +179,9 @@ workflows:
           context: keep-dev
       - migrate_contracts_keep_dev:
           filters:
-            branches:
-              only: master
+ # commenting to test on remote branch.
+ #           branches:
+ #             only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
@@ -191,6 +192,7 @@ workflows:
           context: keep-dev
           requires:
             - build_client_and_test_go
+            - migrate_contracts_keep_dev
   docs:
     jobs:
       - generate_docs_tex
