--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ workflows:
       - build_client_and_test_go:
           context: keep-dev
       - migrate_contracts_keep_dev:
-          filters:
+ #         filters:
  # commenting to test on remote branch.
  #           branches:
  #             only: master
