--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,10 +178,9 @@ workflows:
       - build_client_and_test_go:
           context: keep-dev
       - migrate_contracts_keep_dev:
- #         filters:
- # commenting to test on remote branch.
- #           branches:
- #             only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
