Move solidity directory into Makefile environment
Rather than hard-coding the environment file to contain the solidity
directory, we let the invoker specify it as an environment variable, and
adjust `contract.go` to set this up properly.

--- a/pkg/chain/gen/Makefile
+++ b/pkg/chain/gen/Makefile
@@ -1,4 +1,4 @@
-solidity_dir=$(realpath ../../../contracts/solidity)
+solidity_dir=$(realpath ${SOLIDITY_DIR})
 solidity_files := $(wildcard ${solidity_dir}/contracts/*.sol)
 
 abi_files := $(foreach file, $(solidity_files), abi/$(notdir $(basename $(file))).go)
