Include staking contracts in contract generation
In addition to the implementation contracts, this gives coverage for all
already-hand-rolled contract interfaces.

--- a/pkg/chain/gen/Makefile
+++ b/pkg/chain/gen/Makefile
@@ -9,8 +9,8 @@ solidity_files := $(wildcard ${solidity_dir}/contracts/*.sol)
 abi_files := $(foreach file, $(solidity_files), abi/$(notdir $(basename $(file))).go)
 # *ImplV1.go files will get generated into first-class clean contract bindings.
 # The corresponding contract filenames will drop the ImplV1 and live in the
-# contract/ directory.
-contract_candidates := $(filter %ImplV1.go, $(abi_files))
+# contract/ directory. Staking-related files are in a similar boat.
+contract_candidates := $(filter %ImplV1.go, $(abi_files)) $(filter abi/Staking%.go, $(abi_files))
 contract_files := $(foreach file, $(contract_candidates), contract/$(notdir $(subst ImplV1,,$(basename $(file)))).go)
 
 all: gen_contract_go gen_abi_go
@@ -35,4 +35,7 @@ abi/%.go : abi/%.abi
 	abigen --abi $< --pkg abi --type $* --out $@
 
 contract/%.go: abi/%ImplV1.abi abi/%ImplV1.go abi/%.go
+	go run ./ $< $@
+
+contract/Staking%.go: abi/Staking%.abi abi/Staking%.go
 	go run ./ $< $@
