Run the unlock-and-stake js script

--- a/infrastructure/kube/keep-dev/keep-client/initcontainer/Dockerfile
+++ b/infrastructure/kube/keep-dev/keep-client/initcontainer/Dockerfile
@@ -1,6 +1,9 @@
-FROM ethereum/client-go AS runtime
+FROM node:11 AS runtime
 
-COPY ./unlock-and-stake-eth-account.sh /tmp/unlock-and-stake-eth-account.sh
+WORKDIR /tmp
 
-# ENTRYPOINT cant handle ENV variables.
-ENTRYPOINT ["./tmp/unlock-and-stake-eth-account.sh"]
+RUN npm install web3@1.0.0-beta.55
+
+COPY ./unlock-and-stake-eth-account.js /tmp/unlock-and-stake-eth-account.js
+
+ENTRYPOINT ["node", "./unlock-and-stake-eth-account.js"]
