--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,15 +119,16 @@ jobs:
           root: /tmp
           paths:
             - contracts
-  publish_client:
+  publish_docker_images:
     executor: gcp-gcr/default
     steps:
       - attach_workspace:
           at: /tmp/docker-images
       - run:
-          name: Load keep-client image
+          name: Load docker images
           command: |
             docker load -i /tmp/docker-images/keep-client/keep-client.tar
+            docker load -i /tmp/docker-images/keep-client/keep-client-initcontainer.tar
       - gcp-gcr/gcr-auth:
           google-project-id: GOOGLE_PROJECT_ID
           google-compute-zone: GOOGLE_COMPUTE_ZONE_A
@@ -137,6 +138,11 @@ jobs:
           google-project-id: GOOGLE_PROJECT_ID
           registry-url: $GCR_REGISTRY_URL
           image: keep-client
+          tag: latest
+      - gcp-gcr/push-image:
+          google-project-id: GOOGLE_PROJECT_ID
+          registry-url: $GCR_REGISTRY_URL
+          image: keep-client-initcontainer
           tag: latest
   generate_docs_tex:
     docker:
@@ -213,13 +219,14 @@ workflows:
           context: keep-dev
           requires:
             - build_client_and_test_go
-      - publish_client:
+      - publish_docker_images:
           filters:
             branches:
               only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
+            - build_initcontainer
   docs:
     jobs:
       - generate_docs_tex
