--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,10 +213,10 @@ workflows:
           requires:
             - migrate_contracts
       - migrate_contracts:
-          filters:
-            branches:
-              only: master
-          context: keep-dev
+#          filters:
+#            branches:
+#              only: master
+#          context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
