--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,7 +216,7 @@ workflows:
 #          filters:
 #            branches:
 #              only: master
-#          context: keep-dev
+          context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
