--- a/infrastructure/kube/keep-dev/keep-client/initcontainer/Dockerfile
+++ b/infrastructure/kube/keep-dev/keep-client/initcontainer/Dockerfile
@@ -4,6 +4,15 @@ WORKDIR /tmp
 
 RUN npm install web3@1.0.0-beta.55
 
+ARG CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS
+ENV CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS=$CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS
+
+ARG ETH_HOSTNAME
+ENV ETH_HOSTNAME=$ETH_HOSTNAME
+
+ARG ETH_HOST_PORT
+ENV ETH_HOST_PORT=$ETH_HOST_PORT
+
 COPY /tmp/contracts/StakingProxy.json /tmp/contracts/StakingProxy.json
 COPY /tmp/contracts/TokenStaking.json /tmp/contracts/TokenStaking.json
 COPY /tmp/contracts/KeepToken.json /tmp/contracts/KeepToken.json
